--- a/templates/browseInfo.html
+++ b/templates/browseInfo.html
@@ -5,7 +5,6 @@ author:许诗瑶
 
 <html>
 <head>
-    <header class="bs-docs-nav navbar navbar-static-top" id="top"></header>
 	<meta charset="utf-8">
 	<title>水稻病虫害信息浏览</title>
 	<link rel="stylesheet" href="/static/bootstrap-3.3.7-dist/css/bootstrap.min.css">
@@ -14,6 +13,9 @@ author:许诗瑶
 
 </head>
 <body>
+
+<!-- top的id使返回顶部 -->
+<header class="bs-docs-nav navbar-static-top" id="top"></header>
 
 <!-- 插入图片 -->
 <div>
@@ -26,6 +28,30 @@ author:许诗瑶
 	<li class="active" style="font-size: 20px">信息浏览 <span class="glyphicon glyphicon-search"></span></li>
 </ul>
 
+<!-- 搜索栏 -->
+<div class="container">
+    <div class="row">
+        <div class="col-sm-3">
+            <h3 style="color: #3c763d; vertical-align: top">请输入搜索信息：</h3>
+        </div>
+        <div class="col-sm-9" style="padding: 16px 8px 10px">
+            <form class="bs-example bs-example-form" role="form">
+                <div class="input-group" >
+                    <input type="text" name="searchValue" class="form-control" value="{{ sValue }}" placeholder="如，稻瘟病">
+                    <span class="input-group-btn">
+                        <button class="btn btn-default" type="submit button" style="background-color: #3c763d;color: white">
+                            搜索
+                        </button>
+                    </span>
+                </div><!-- /input-group -->
+            </form>
+        </div>
+    </div>
+</div>
+
+<!-- 分割线 -->
+<br>
+<HR align=center width="90%" color=#3c763d SIZE=10>
 
 <div class="container">
   <div class="row">
@@ -41,17 +67,46 @@ author:许诗瑶
     <div class="col-sm-8">
         <!-- 对数据库传来u的每一行数据item遍历 -->
         {% for item in u %}
-            <!-- 下划线+跳转链接 -->
-		    <h3 class="active"><a href='/detail_info/{{ item[1] }}' style="color: #3c763d" ><u>{{ item[1] }}</u></a></h3>
-            <!-- 显示内容简要 -->
-            <p>{{ item[2] }}</p>
-            <!-- 显示图片 -->
-            <img src="/static/pics/{{ item[1] }}.jpeg" width="600" height="300" alt="none">
-            <br><br><br>
+            <!-- 标题中包含搜索信息 -->
+            {% if sValue in item[1] or sValue in item[2] %}
+                <div class="row">
+                    <div class="col-sm-9">
+                        <!-- 下划线+跳转链接 -->
+                        <h3 class="active"><a href='/detail_info/{{ item[1] }}' style="color: #3c763d" ><u>
+                            {{ item[1] }}
+                        </u></a></h3>
+                    </div>
+                    <div class="col-sm-3" align="right" style="padding: 15px">
+                        <!-- 管理员删除条目按钮 -->
+                        <form action="/deleteItem" method="post">
+                            <button type="submit button" name=no value="{{ item[0] }}" class="btn btn-default btn-sm" style="background-color: #3c763d; color: white"
+                            onclick=confirm("确认删除"+'{{ item[1] }}'+"条目吗？")>
+                            <span class="glyphicon glyphicon-minus"></span> 删除此条目
+                            </button>
+                        </form>
+                    </div>
+                </div>
+                <!-- 显示内容简要 -->
+                <p>{{ item[2] }}</p>
+                <!-- 显示图片 -->
+                <img src="/static/pics/{{ item[1] }}.jpeg" width="100%" height="350" alt="none">
+                <br><br><br>
+                <HR align=center width="100%" color=#3c763d SIZE=10>
+            {% endif %}
         {% endfor %}
+        <!-- 管理员增加条目按钮 -->
+        <div style="padding: 15px 0px">
+            <button type="button" class="btn btn-default btn-sm" style="background-color: #3c763d; color: white">
+            <span class="glyphicon glyphicon-plus"></span> 增加新条目
+            </button>
+        </div>
     </div>
   </div>
 </div>
+
+<!-- 分割线 -->
+<br>
+<HR align=center width="90%" color=#3c763d SIZE=10>
 
 <!-- 返回顶部 -->
 <div align="center">
